@@ -1,3 +1,8 @@
+2018-05-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/bug-2746.c:
+	  Test for bug #2746.
+
 2018-04-25 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/include/stdbool.h:
